2010-06-20  Sebastien Pouliot  <sebastien@ximian.com>

	* ProvideValidXmlStringRule.cs:
	* ProvideValidXPathExpressionRule.cs:
		Apply AvoidRepetitiveCallsToPropertiesRule

2010-06-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* BadRecursiveInvocationRule.cs: Fix regression if a type
	cannot be resolved (the original name is still available)

2010-06-13  Sebastien Pouliot  <sebastien@ximian.com>

	* BadRecursiveInvocationRule.cs:
	* DoNotRecurseInEqualityRule.cs:
	* DoNotRoundIntegersRule.cs:
	* EnsureLocalDisposalRule.cs:
	* ProvideCorrectRegexPatternRule.cs:
	* ProvideValidXmlStringRule.cs:
	* ProvideValidXPathExpressionRule.cs:
	* ReviewSelfAssignmentRule.cs:
		Apply AvoidRepetitiveCallsToPropertiesRule

2010-06-11  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs: Update
	comment in xmldoc wrt FX4
	* ReviewInconsistentIdentityRule.cs: Fix several defects (self 
	test) and reduce memory usage (e.g. array creation)

2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>

	* DontCompareWithNaNRule.cs: Skip rule if the assembly does not
	refer (or define for mscorlib) Single or Double types
	* UseValueInPropertySetterRule.cs: Skip rule if the type has
	no properties.

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs:
	* EnsureLocalDisposalRule.cs:
	* ReviewInconsistentIdentityRule.cs:
 		Apply AvoidUnnecessarySpecializationRule

2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckParametersNullityInVisibleMethodsRule.cs: Fix when 
	"ldarg 0" is used instead of the, much more common, "ldarg_0"
	* MethodCanBeMadeStaticRule.cs: Fix when "ldarg 0" is used 
	instead of the, much more common, "ldarg_0"

2010-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs: Apply 
	AvoidRepetitiveCallsToPropertiesRule on MethodDefinition::
	get_DeclaringType and get_Name and TypeReference::Get_FullName